委外大改前再提交一下

--- a/EmpInfo/Views/Apply/BeginApplyHH.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyHH.cshtml
@@ -438,7 +438,7 @@
         <h4 class="text-danger"><i class="fa fa-info-circle"></i> 操作说明 </h4>
         <div style="margin-left:18px;padding-top:6px;" class="text-danger">
             <p>
-                1. 流程步骤：流程开始--->客服提交换货申请---[抄送给营业员]--->品质经理审批--->计划经理审批--->生产主管审批--->部门总经理审批--->物流处理--->市场管理部结案--->流程结束。
+                1. 流程步骤：流程开始--->客服提交换货申请---[抄送给营业员]--->品质经理审批--->计划经理审批--->生产主管审批--->部门总经理审批--->QA审批--->物流处理--->市场管理部结案--->流程结束。
             </p>
             <p>
                 2. 此流程只适合纯换货，不走K3红字单的场景。
