--- a/EmpInfo/Views/Apply/BeginApplySP.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySP.cshtml
@@ -11,14 +11,14 @@
     <style type="text/css">
         .b-label {
             display: inline-block;
-            width: 85px;
+            width: 90px;
             color: gray;
             vertical-align: middle;
         }
 
         .b-input {
             display: inline-block;
-            width: 70%;
+            width: 68%;
         }
 
         .b-div {
@@ -133,13 +133,13 @@
 
             $("#content_type").on("change", function () {
                 var ty=$(this).val();
-                if (ty == "产品" || ty=="原材料") {
+                if (ty != "文件") {
                     $(".product_extra_info").show();
-                    //if(ty=="产品"){
-                    //    $(".isReturnBackDiv").show();
-                    //}else{
-                    //    $(".isReturnBackDiv").hide();
-                    //}
+                    if(ty=="产品"){
+                        $(".isReturnBackDiv").show();
+                    }else{
+                        $(".isReturnBackDiv").hide();
+                    }
                     if(ty=="原材料"){
                         $(".qualityAuditorNameDiv").show();
                         $(".stockAddrDiv").show();
@@ -149,7 +149,7 @@
                     }
                 } else {
                     $(".product_extra_info").hide();
-                    //$(".isReturnBackDiv").hide();
+                    $(".isReturnBackDiv").hide();
                     $(".qualityAuditorNameDiv").hide();
                     $(".stockAddrDiv").hide();
                 }
@@ -186,8 +186,7 @@
                     return;
                 }
 
-                var obj = utils.getFormObj($("#fm"));
-                obj.isReturnBack = "否";
+                var obj = utils.getFormObj($("#fm"));                
                 if ($("#al_file_list").children().length == 0) {
                     obj.has_attachment = false;
                 }else{
@@ -198,10 +197,10 @@
                         toastr.error("从外地发往汕尾的，【收寄类型】请选择收件");
                         return;
                     }
-                    if (obj.content_type == "产品" && obj.isReturnBack == "是" && obj.has_attachment == false) {
-                        toastr.error("寄出产品且是退补货时，必须上传附件证明");
-                        return;
-                    }
+                    //if (obj.content_type == "产品" && obj.isReturnBack == "是" && obj.has_attachment == false) {
+                    //    toastr.error("寄出产品且是退补货时，必须上传附件证明");
+                    //    return;
+                    //}
                 } else {
                     if (obj.to_addr.indexOf("汕尾") < 0) {
                         toastr.error("从汕尾发往外地的，【收寄类型】请选择寄件");
@@ -212,9 +211,9 @@
                     toastr.error("仁寿属于眉山市，请在地址中加上眉山市，否则运费计算会有问题");
                     return;
                 }
-                if (obj.content_type == "产品" || obj.content_type == "原材料") {
+                if (obj.content_type != "文件") {
                     if(items.length<1){
-                        toastr.error("至少必须录入一行产品或原材料");
+                        toastr.error("至少必须录入一行明细");
                         return;
                     }
                     if (obj.package_num == "") {
@@ -256,9 +255,9 @@
                             toastr.error("仓库地址必须选择");
                             return;
                         }
-                    }else{
+                    }else if(obj.content_type == "产品"){
                         if(obj.isReturnBack==""){
-                            toastr.error("是否退补货必须选择");
+                            toastr.error("是否信利产品必须选择");
                             return;
                         }
                     }
@@ -582,24 +581,26 @@
                                 <option value="产品">产品</option>
                                 <option value="文件">文件</option>
                                 <option value="原材料">原材料</option>
+                                <option value="辅料/设备配件">辅料/设备配件</option>
+                                
                             </select>
                         </div>
                     </div>
                 </div>
-                @*<div class="col-md-4 col-sm-6 col-xs-12 isReturnBackDiv">
+                <div class="col-md-4 col-sm-6 col-xs-12 isReturnBackDiv">
                     <div class="b-div">
                         <span class="b-label">
-                            是否退补货:
+                            是否信利产品:
                         </span>
                         <div class="b-input">
-                            <select class="form-control" name="isReturnBack" id="isReturnBack" 、>
-                                <option value="">---- 下拉选择是否退补货 ----</option>
+                            <select class="form-control" name="isReturnBack" id="isReturnBack" >
+                                <option value="">---- 下拉选择是否信利产品 ----</option>
                                 <option value="是">是</option>
                                 <option value="否">否</option>
                             </select>
                         </div>
                     </div>
-                </div>*@                
+                </div>                
                 <div class="col-md-4 col-sm-6 col-xs-12 qualityAuditorNameDiv">
                     <div class="b-div">
                         <span class="b-label">
@@ -848,8 +849,9 @@
             <p>
                 1. 流程步骤如下：<br/>
                 [1]. 收寄文件：流程开始--->员工提交申请--->部门负责人审批--->流程结束。<br/>
-                [2]. 收寄产品：流程开始--->员工提交申请--->部门负责人审批--->物流部审批 --->流程结束。<br/>
-                [3]. 收寄原材料：流程开始--->员工提交申请--->品质部审批--->部门负责人审批--->仓管部审批--->物流部审批--->流程结束。
+                [2]. 收寄产品：流程开始--->员工提交申请--->部门负责人审批--->QA审批（如果寄信利产品）--->物流部审批 --->流程结束。<br/>
+                [3]. 收寄原材料：流程开始--->员工提交申请--->品质部审批--->部门负责人审批--->仓管部审批--->物流部审批--->流程结束。<br/>
+                [4]. 收集辅料/设备配件：流程开始--->员工提交申请--->部门负责人审批--->物流部审批 --->流程结束。
             </p>
             <p>
                 2. 10KG以内的省内件，默认使用顺丰标快；10KG以内的省外件或港澳台件，时效是次日达的，默认使用顺丰标快；
@@ -859,11 +861,11 @@
             <p>
                 3. 包装箱尺寸和卡板尺寸的格式是长*宽*高，单位是厘米（CM）；如果没有卡板的，可以不需填写卡板数量和卡板尺寸。
             </p>
+            @*<p>
+                4. 收寄类型是寄件且收寄内容是产品且是退补货的，必须上传附件（图片格式），QA审批后即可在查看界面打印放行条，给门卫扫描后放行，不需再走放行条流程。
+            </p>*@
             <p>
-                4. 收寄类型是寄件且收寄内容是产品且是退补货的，必须上传附件（图片格式），行政部审批后即可在查看界面打印放行条，给门卫扫描后放行，不需再走放行条流程。
-            </p>
-            <p>
-                5. 如有问题，请联系物流部周秀花：13543166052（676052），zhouxh.wlb@truly.com.cn
+                4. 如有问题，请联系物流部周秀花：13543166052（676052），zhouxh.wlb@truly.com.cn
             </p>
         </div>
     </div>
