--- a/EmpInfo/Views/Apply/BeginApplyXC.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyXC.cshtml
@@ -551,12 +551,12 @@
                     <div class="small text-danger"><i class="fa fa-info-circle"></i> 单位： <span id="unit_name"></span></div>
                 </div>
             </div>
-            <div class="b-div">
+            @*<div class="b-div">
                 <span class="b-label">
                     本月订单需求产能:
                 </span>
                 <div class="b-input">
-                    <input type="text" class="form-control" name="order_require_capacity" required />                   
+                    <input type="text" class="form-control" name="order_require_capacity" required />
                 </div>
             </div>
             <div class="b-div">
@@ -574,10 +574,10 @@
                 <div class="b-input">
                     <input type="text" class="form-control" name="need_outsourcing_capacity" required />
                 </div>
-            </div>
+            </div>*@
             <div class="b-div">
                 <span class="b-label">
-                    本次委外加工周期:
+                    本次委外加工天数:
                 </span>
                 <div class="b-input">
                     <input type="text" class="form-control" name="outsourcing_cycle" required /> 
