--- a/EmpInfo/Views/Apply/CheckXCApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckXCApply.cshtml
@@ -275,7 +275,7 @@
                 @h.qty.ToString("###,##0.######") @h.unit_name
             </div>
         </div>
-        <div class="b-div">
+        @*<div class="b-div">
             <span class="b-label">
                 本月订单需求产能:
             </span>
@@ -298,10 +298,10 @@
             <div class="b-input">
                 @h.need_outsourcing_capacity
             </div>
-        </div>
+        </div>*@
         <div class="b-div">
             <span class="b-label">
-                本次委外加工周期:
+                本次委外加工天数:
             </span>
             <div class="b-input">
                 @h.outsourcing_cycle
