--- a/EmpInfo/Views/ApplyExtra/XCAuditorSetting.cshtml
+++ b/EmpInfo/Views/ApplyExtra/XCAuditorSetting.cshtml
@@ -266,6 +266,8 @@
                         <option value="半导体">半导体</option>
                         <option value="电子">电子</option>
                         <option value="光电仁寿">光电仁寿</option>
+                        <option value="工业">工业</option>
+                        <option value="仪器">仪器</option>
                     </select>
                     <div>部门名称：</div>
                     <input type="text" class="form-control" name="dep_name" style="margin-top:4px;" />
